--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "npx nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +16,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "rss-parser": "^3.13.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
